--- a/style.css
+++ b/style.css
@@ -247,8 +247,8 @@ body {
 }
 
 .image {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 5%;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -269,10 +269,23 @@ body {
     flex-grow: 1; /* Pushes button to bottom */
 }
 .card-image {
+
     width: 100%;
-    height: 180px;
-    object-fit: cover;
+    
+    height: 90px;
+    object-fit :contain;
 }
+.card-button{
+    position: relative;
+    display: inline-block;
+    padding: 0.2rem 0.7rem;
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
 
 
 
